# gifsync

./: .gitignore  Pipfile  README.md  pyproject.toml
gifsync/: __main__.py  effect.py  effects.py  frames.py  gifsync.py  rendering.py  volume.py
