[tool.poetry]
name = "gifsync"
version = "0.0.0"
description = "Syncs gifs and audio"
authors = ["dhsavell <dhsavell05@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
halo = "^0.0.28"
pydub = "^0.23.1"
pillow = "^6.2"
wand = "^0.5.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gifsync = 'gifsync.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
